# LLMAPIServer

./: README.md  pyproject.toml
APIService/: main.py
APIService/core/: config.py  settings.py
APIService/llm/: language_model.py  refining_service.py
APIService/models/: request_model.py  response_model.py
APIService/routers/: creating.py  knowledge.py  proofreading.py  refining.py  refining_router.py
APIService/services/: refining_service.py
APIService/templates/: refining_template.py
